--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Jarvis</string>
+    <string name="greeting">J.A.R.V.I.S. SYSTEM ONLINE</string>
 </resources>
