Implement dashboard layout with custom tech-style buttons
- Add vector icons for Network, Power, Supplies, and System modules.
- Define `iron_man_cyan` and `iron_man_dark_tech` colors in `colors.xml`.
- Create `bg_button.xml` featuring a cyan stroke, rounded corners, and a ripple effect.
- Update `activity_main.xml` to include a `GridLayout` containing MaterialButtons for Groceries, System, Network, and Armor.
- Style the greeting text with updated sizing, bold weight, and cyan coloring.
- Add corresponding string resources for new dashboard categories.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Jarvis</string>
     <string name="greeting">J.A.R.V.I.S. SYSTEM ONLINE</string>
+    <string name="title_groceries">Groceries</string>
+    <string name="title_system">System</string>
+    <string name="title_comms">Network</string>
+    <string name="title_power">Armor</string>
 </resources>
