Implement Groceries feature with Bottom Navigation
- Add `GroceriesActivity` and its corresponding layout with a `BottomNavigationView` and `NavHostFragment`.
- Create `GroceriesListFragment` and `InventoryFragment` with tech-styled layouts.
- Define `mobile_navigation_groceries.xml` to manage navigation between the list and inventory screens.
- Add vector assets `ic_list.xml` and `ic_inventory.xml` for navigation icons.
- Configure color selectors and styles for the bottom navigation bar to match the JARVIS theme.
- Update `MainActivity` to include a button for launching the new Groceries module.
- Add required Navigation component dependencies to `build.gradle.kts` and `libs.versions.toml`.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="title_system">System</string>
     <string name="title_comms">Network</string>
     <string name="title_power">Armor</string>
+    <string name="title_inventory">Inventory</string>
+    <string name="title_list">List</string>
+    <string name="title_activity_groceries">Groceries</string>
+    <string name="title_groceries_list">Groceries List</string>
 </resources>
