Update grocery list UI with themed icons and background shapes
- Update `GroceryItem` data class to include a mandatory `iconBgRes` field.
- Implement colorful oval background drawables (`bg_icon_red.xml`, `bg_icon_blue.xml`, etc.) for grocery category icons.
- Enhance vector drawables for `ic_apple`, `ic_bread`, `ic_cheese`, `ic_egg`, `ic_milk`, and `ic_water` with multi-color paths and more detailed designs.
- Add `ic_peanuts.xml` vector asset and "Peanuts" string resource.
- Update `GroceriesListFragment` to assign specific background resources to each list item.
- Modify `GroceryAdapter` to apply the background resource to the item's `ImageView`.
- Adjust `item_grocery.xml` layout to increase icon size to 48dp and add 8dp padding for better visual balance within the new circular backgrounds.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="item_water">Water</string>
     <string name="item_butter">Butter</string>
     <string name="item_yogurt">Yogurt</string>
+    <string name="item_peanuts">Peanuts</string>
 </resources>
