--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,13 @@
     <string name="item_butter">Butter</string>
     <string name="item_yogurt">Yogurt</string>
     <string name="item_peanuts">Peanuts</string>
+    <string name="scan_barcode_hint">Point camera at barcode</string>
+    <string name="cancel">Cancel</string>
+    <string name="scan_to_add">Scan barcode to add to list</string>
+    <string name="scan_to_link">Scan barcode to link to item</string>
+    <string name="barcode_linked">Barcode linked successfully</string>
+    <string name="barcode_added">Item added to grocery list</string>
+    <string name="barcode_not_linked">Barcode not linked to any item</string>
+    <string name="barcode_already_in_list">Item already in grocery list</string>
+    <string name="select_item_to_link">Select item to link barcode to</string>
 </resources>
