Implement product lookup and OCR label scanning for grocery items
- Add `ProductLookupService` to fetch product names and categories from multiple online sources (Open Food Facts, UPC Item DB, and retail scrapers) using a chain-of-responsibility pattern.
- Implement `OcrScannerFragment` using CameraX and ML Kit Text Recognition to extract product names from physical labels when barcode lookups fail.
- Introduce `GroceryItem` sealed class to support both `Static` (predefined) and `Dynamic` (discovered) items.
- Add `IconGenerator` to automatically assign themed icons and backgrounds based on product name or category keywords.
- Implement `AddItemDialog` and `RenameDialog` for manual entry and editing of product names, including logic to merge duplicate items.
- Update `GroceryRepository` to manage dynamic items, barcode linking, and list synchronization (Inventory vs. Grocery List).
- Enhance `GroceriesListFragment` to handle the new barcode-to-lookup-to-OCR workflow.
- Add required INTERNET permission and ML Kit dependencies.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,22 @@
     <string name="barcode_not_linked">Barcode not linked to any item</string>
     <string name="barcode_already_in_list">Item already in grocery list</string>
     <string name="select_item_to_link">Select item to link barcode to</string>
+    <string name="searching_product">Searching for product…</string>
+    <string name="product_found">Added: %1$s</string>
+    <string name="add_item_title">Product Not Found</string>
+    <string name="add_item_hint">Barcode not found online. Enter the product name manually.</string>
+    <string name="item_name_hint">Product name</string>
+    <string name="add">Add</string>
+    <string name="name_required">Please enter a name</string>
+    <string name="product_not_found_enter_manually">Product not found — please enter the name</string>
+    <string name="product_not_found_try_ocr">Not found online — scan the product label</string>
+    <string name="ocr_title">SCAN PRODUCT LABEL</string>
+    <string name="ocr_hint">Point label inside the box, then tap screen to scan</string>
+    <string name="ocr_capture">TAP SCREEN OR PRESS HERE</string>
+    <string name="ocr_scanning">Scanning label…</string>
+    <string name="ocr_result_prefilled">Label scanned — confirm or edit the name</string>
+    <string name="ocr_name_hint">Product name</string>
+    <string name="ocr_confirm">CONFIRM NAME</string>
+    <string name="rename_item_title">Rename Item</string>
+    <string name="save">Save</string>
 </resources>
